--- a/gitblit/src/main/web/admin/main.css
+++ b/gitblit/src/main/web/admin/main.css
@@ -2,6 +2,19 @@ body {
     margin: 0;
 }
 
+a,
+a:visited,
+a:hover,
+a:active {
+    text-decoration: none;
+    color: inherit;
+}
+
+.el-breadcrumb__item__inner,
+.el-breadcrumb__item__inner a {
+    text-decoration: none;
+}
+
 .el-breadcrumb {
     margin: 20px 0;
     padding: 0 20px;
